--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^31.0.1",
-    "fs-extra": "^11.3.1"
+    "fs-extra": "^11.3.1",
+    "yauzl": "^2.10.0"
   }
 }
