--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notesapp-desktop-manager",
+  "name": "desktopFilesManager",
   "version": "1.0.0",
   "description": "Gestor de notas y de archivos",
   "main": "main.js",
@@ -11,8 +11,49 @@
   "author": "JairLinan",
   "license": "ISC",
   "dependencies": {
-    "electron": "^31.0.1",
     "fs-extra": "^11.3.1",
     "yauzl": "^2.10.0"
+  },
+  "devDependencies": {
+    "electron": "^31.0.1",
+    "electron-builder": "^25.1.8"
+  },
+  "scripts": {
+    "start": "electron .",
+    "dev": "electron .",
+    "build": "electron-builder",
+    "build-win": "electron-builder --win",
+    "dist": "electron-builder --publish=never"
+  },
+  "build": {
+    "appId": "com.jairlinan.desktopfilemanager",
+    "productName": "Desktop File Manager",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!dist/**/*",
+      "!build/**/*",
+      "!*.md",
+      "!AGENTS.md",
+      "!SECURITY-CHECKLIST.md"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icons/icon.ico",
+      "requestedExecutionLevel": "asInvoker"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "assets/icons/icon.ico",
+      "uninstallerIcon": "assets/icons/icon.ico",
+      "installerHeaderIcon": "assets/icons/icon.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Desktop File Manager"
+    }
   }
 }
